# TurkishFrameNet-CPP

./: CMakeLists.txt  Frame.cpp  Frame.h  FrameElement.cpp  FrameElement.h  FrameNet.cpp  FrameNet.h  LexicalUnit.cpp  LexicalUnit.h  README.md  conanfile.py  files.txt
Test/: FrameElementTest.cpp  FrameNetTest.cpp
src/: CMakeLists.txt  Frame.cpp  Frame.h  FrameElement.cpp  FrameElement.h  FrameElementList.cpp  FrameElementList.h  FrameNet.cpp  FrameNet.h
